# ChangeLog for sys-devel/m4
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.81 2007/04/12 17:05:38 uberlord Exp $

  12 Apr 2007; Roy Marples <uberlord@gentoo.org> m4-1.4.9.ebuild:
  Don't install charset.alias to avoid collisions - libc or libiconv will
  provide it.

  09 Apr 2007; Peter Weller <welp@gentoo.org> m4-1.4.8.ebuild:
  Stable on amd64 wrt bug 172005

  26 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> m4-1.4.8.ebuild:
  Stable on sparc wrt #172005

  26 Mar 2007; Jeroen Roovers <jer@gentoo.org> m4-1.4.8.ebuild:
  Stable for HPPA (bug #172005).

  24 Mar 2007; Joseph Jezak <josejx@gentoo.org> m4-1.4.8.ebuild:
  Marked ppc stable for bug #172005.

  24 Mar 2007; Andrej Kacian <ticho@gentoo.org> m4-1.4.8.ebuild:
  Stable on x86, bug #172005.

  24 Mar 2007; Markus Rothe <corsair@gentoo.org> m4-1.4.8.ebuild:
  Stable on ppc64; bug #172005

*m4-1.4.9 (24 Mar 2007)

  24 Mar 2007; Mike Frysinger <vapier@gentoo.org> m4-1.4.9.ebuild:
  Version bump.

  20 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> m4-1.4.7.ebuild:
  Stable on MIPS; bug #156293

  20 Dec 2006; Steve Dibb <beandog@gentoo.org> m4-1.4.7.ebuild:
  amd64 stable, bug 156293

  06 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> m4-1.4.7.ebuild:
  Stable on Alpha.

  01 Dec 2006; Markus Rothe <corsair@gentoo.org> m4-1.4.7.ebuild:
  Stable on ppc64; bug #156293

  01 Dec 2006; nixnut <nixnut@gentoo.org> m4-1.4.7.ebuild:
  Stable on ppc wrt bug 156293

  28 Nov 2006; Jeroen Roovers <jer@gentoo.org> m4-1.4.7.ebuild:
  Stable for HPPA (bug #156293).

  27 Nov 2006; Christian Faulhammer <opfer@gentoo.org> m4-1.4.7.ebuild:
  stable x86, bug #156293

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> m4-1.4.7.ebuild:
  Stable on sparc wrt #156293

*m4-1.4.8 (26 Nov 2006)

  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> +m4-1.4.8.ebuild:
  Version bump.
