@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/m4
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.81 2007/04/12 17:05:38 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.82 2007/04/17 00:35:11 vapier Exp $
+
+  17 Apr 2007; Mike Frysinger <vapier@gentoo.org> m4-1.4.9.ebuild:
+  Add support for USE=examples as suggested by Paulo da Silva #174798.
 
   12 Apr 2007; Roy Marples <uberlord@gentoo.org> m4-1.4.9.ebuild:
   Don't install charset.alias to avoid collisions - libc or libiconv will
